; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_session.c_fst_session_stt_disarm.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_session.c_fst_session_stt_disarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fst_session = type { i64 }

@fst_session_timeout_handler = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fst_session*)* @fst_session_stt_disarm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fst_session_stt_disarm(%struct.fst_session* %0) #0 {
  %2 = alloca %struct.fst_session*, align 8
  store %struct.fst_session* %0, %struct.fst_session** %2, align 8
  %3 = load %struct.fst_session*, %struct.fst_session** %2, align 8
  %4 = getelementptr inbounds %struct.fst_session, %struct.fst_session* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32, i32* @fst_session_timeout_handler, align 4
  %9 = load %struct.fst_session*, %struct.fst_session** %2, align 8
  %10 = call i32 @eloop_cancel_timeout(i32 %8, i32* null, %struct.fst_session* %9)
  %11 = load i64, i64* @FALSE, align 8
  %12 = load %struct.fst_session*, %struct.fst_session** %2, align 8
  %13 = getelementptr inbounds %struct.fst_session, %struct.fst_session* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @eloop_cancel_timeout(i32, i32*, %struct.fst_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
